[package]
name        = "download-assistant"
version     = "0.3.0"
edition     = "2021"
description = "Assistant d'installation – TUI + log fichier"

[[bin]]
name = "download-assistant"
path = "src/main.rs"

[dependencies]
# ── Réseau ────────────────────────────────────────────────────────────────────
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tokio        = { version = "1",    features = ["full"] }
futures-util = "0.3"

# ── TUI ───────────────────────────────────────────────────────────────────────
ratatui      = "0.28"
crossterm    = "0.28"

# ── Horodatage log ────────────────────────────────────────────────────────────
chrono       = { version = "0.4", features = ["clock"] }

# ── Gestion d'erreurs ─────────────────────────────────────────────────────────
anyhow       = "1"

# ── Décompression ─────────────────────────────────────────────────────────────
zip          = "2"
sevenz-rust  = "0.6"
tar          = "0.4"
flate2       = "1"
bzip2        = { version = "0.4", features = ["static"] }
xz2          = { version = "0.1", features = ["static"] }

[profile.release]
opt-level = 3
lto       = true
strip     = true
